--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
                             <li><a class="dropdown-item" href="index.html">Jumlah Penduduk</a></li>
                             <li><a class="dropdown-item" href="pendudukjeniskelamin.html">Jenis Kelamin</a></li>
                             <li><a class="dropdown-item" href="jumlahkendaraan.html">Jumlah Kendaraan</a></li>
+                            <li><a class="dropdown-item" href="AGAMA.html">Jumlah Wajib Pajak Bumi dan Bangunan</a></li>
+                            <li><a class="dropdown-item" href="Suhu Udara.html">Suhu Udara Per Bulan</a></li>
                             <li>
                                 <hr class="dropdown-divider">
                             </li>
