--- a/pendudukjeniskelamin.html
+++ b/pendudukjeniskelamin.html
@@ -36,6 +36,8 @@
                             <li><a class="dropdown-item" href="index.html">Jumlah Penduduk</a></li>
                             <li><a class="dropdown-item" href="pendudukjeniskelamin.html">Jenis Kelamin</a></li>
                             <li><a class="dropdown-item" href="jumlahkendaraan.html">Jumlah Kendaraan</a></li>
+                            <li><a class="dropdown-item" href="AGAMA.html">Jumlah Wajib Pajak Bumi dan Bangunan</a></li>
+                            <li><a class="dropdown-item" href="Suhu Udara.html">Suhu Udara Per Bulan</a></li>
                             <li>
                                 <hr class="dropdown-divider">
                             </li>
@@ -157,7 +159,7 @@
                 },
                 offsetY: -20,
                 style: {
-                    fontSize: '12px',
+                    fontSize: '8px',
                     colors: ["#304758"]
                 }
             },
